bnk07 - runJARfile.md, display pretty